0.4.0:

* Added a check script to determine when the instance is up by running lsof to
check that the process is listening on the specified host and port.

* Disable JMX by default as it binds to a wildcard address (add
-Dcom.sun.management.jmxremote to java_opts if you want it or just use
jolokia)

0.3.0:

* Allow the configuration file to be specified and pass it on the command-line

* Set the java.io.tmpdir to be under the instance directory

* Start in the product directory so relative paths work as expected

* Enable CPU affinity to be set to only run processes on specific CPU cores

* Modify the activemq start script to ensure that we have one process running
in the foreground

* Fixed bug where setting the version at the instance level still resulted in
an error that the version was not set.

0.2.0:

* Removed bind_address and replaced it with a config hash to set variables
that are used when templates are processed.