@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+<restrict>
+  <commands>
+    <command>read</command>
+    <command>list</command>
+    <command>version</command>
+    <command>search</command>
+  </commands>
+  <http>
+    <method>get</method>
+    <method>post</method>
+  </http>
+</restrict>
