@@ -10,6 +10,10 @@ class activemq (
   $logdir           = '/var/log/activemq',
   $java_home        = '/usr/java/latest',
   $java_opts        = '',
+  $jolokia          = false,
+  $jolokia_address  = 'localhost',
+  $jolokia_port     = '8778',
+  $jolokia_version  = '1.1.1',
   $max_mem          = '2048m',
   $min_mem          = '1024m',
   $mode             = undef,
