@@ -8,6 +8,10 @@ define activemq::service (
   $logdir,
   $java_home,
   $java_opts,
+  $jolokia,
+  $jolokia_address,
+  $jolokia_port,
+  $jolokia_version,
   $max_mem,
   $min_mem,
   $product,
