@@ -7,6 +7,10 @@ define activemq::template(
   $group,
   $java_home,
   $java_opts,
+  $jolokia,
+  $jolokia_address,
+  $jolokia_port,
+  $jolokia_version,
   $logdir,
   $max_mem,
   $min_mem,
